<resources>

    <string name="app_name">Bazar Dor </string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Vending Login</string>

    <!-- Strings -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms">The Agent Accepts the Terms and Conditions of Usage.</string>
    <string name="terms_accept">I accept the Terms and Conditions of Usage.</string>
    <string name="submit">Submit</string>
    <string name="fullname">FirstName</string>
    <string name="sur_name">SurName</string>
    <string name="id_passport">Id/Passport</string>
    <string name="mobile_number">Mobile</string>
    <string name="register">Register Now</string>
    <string name="agent_registration">Agent Registration</string>
    <string name="clickto_vend_service">Click to Vend Service</string>

    <!-- Color Values ! -->
    <color name="black">#000000</color>
    <color name="opaqueBlack">#161616</color>
    <color name="transperant">#00000000</color>
    <color name="lightGreen">#2fc176</color>
    <color name="whiteColor">#ffffff</color>
    <color name="offBlack">#606060</color>
    <color name="buttonBackgroundLight">#8c8a8d</color>

    <string name="title_activity_main_menu">Bazar dor</string>
    <string name="title_activity_user_specific_pin">Bazar dor</string>
    <string name="title_activity_vendor">Bazar dor</string>
    <string name="title_activity_vendor_item">Bazar dor</string>
    <string name="title_activity_confirm">Bazar dor</string>
    <string name="title_activity_registration">Bazar dor</string>
    <string name="title_activity_printer_demo">Bazar dor</string>
    
    <string name="connect">connect</string>
    <string name="consucceed">connect succeed</string>
    <string name="disconnect">close</string>
    <string name="cancel">cancel</string>
    <string name="send">send</string>
    <string name="bold">bold</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="underline">Underline</string>
    <string name="mini">Minfont</string>
    <string name="barcode">Barcode</string>
    <string name="barcode2">Barcode2</string>
    <string name="introduce">"kishor D gupta"</string>
    <string name="website">nothing </string>
    <string name="UInitLib">Init failure!</string>
    <string name="ProgressDialog">Information!</string>
    <string name="DialogInf">Initialization BlueTooth device...!</string>
    <string name="ShowLable">InPut Printer Name:</string>
    <string name="BKPrint">Background</string>
    <string name="BackPrintBegin">BKBegin</string>
    <string name="BackPrintEnd">BKEnd</string>

</resources>